objects/Opportunity_Part__c.object
<CustomObject>
    <fields>
        <fullName>NDR_Current_Stage__c</fullName>
        <description>Removed NDR from picklist values, to make generic for CCR &amp; NDR.</description>
        <label>Current Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part imported from SAP</fullName>
                </value>
                <value>
                    <fullName>Part status received</fullName>
                </value>
                <value>
                    <fullName>Part approved</fullName>
                </value>
                <value>
                    <fullName>Part rejected</fullName>
                </value>
                <value>
                    <fullName>Price agreed</fullName>
                </value>
                <value>
                    <fullName>Price disagreed</fullName>
                </value>
                <value>
                    <fullName>Quote Updated</fullName>
                </value>
                <value>
                    <fullName>Additional Pricing Information received from GPMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDR_Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>1750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDR_Customer_Requested_Price_Currency__c</fullName>
        <label>Customer Requested Price Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Customer_Requested_Price_Per__c</fullName>
        <label>Customer Requested Price Per</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Customer_Requested_Price_UOM__c</fullName>
        <label>Customer Requested Price UOM</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Customer_Requested_Price__c</fullName>
        <label>Requested Price</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_DMM_Response__c</fullName>
        <label>Agree/Disagree Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_DMM_Response_on_GMPS_Response__c</fullName>
        <label>DMM Response on GMPS Response</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_DMM_Response_on_Price_Information__c</fullName>
        <label>DMM Response on Price Information</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Delivery_Unit__c</fullName>
        <label>Delivery Unit</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_Dimensions__c</fullName>
        <label>Dimensions</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Eligible_Part__c</fullName>
        <description>This field indicates if the Part is Eligible for NDR. The data comes from Corporate_Part_Attributes table in TED for Attribute Id 132</description>
        <formula>Part__r.NDR_Eligible_Part__c</formula>
        <inlineHelpText>A - TENGO Elite 
B - TENGO Protect</inlineHelpText>
        <label>NDR Eligible Part</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Final_Approver_Name__c</fullName>
        <label>Final Approver Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_GPMS_Approval_Flag__c</fullName>
        <label>Approval Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_GPMS_Approval_Flag_formula__c</fullName>
        <formula>CASE(NDR_GPMS_Approval_Flag__c, 
&apos;N&apos;, &apos;Rejected&apos;, 
&apos;A&apos;, &apos;Approved&apos;, 
&apos;O&apos;, &apos;Offered&apos;, 
&apos;H&apos;, &apos;On-Hold&apos;, 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Flag formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_GPMS_Approval_Price__c</fullName>
        <label>Approval Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_GPMS_Approved_Currency__c</fullName>
        <label>Approved Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_GPMS_Signal__c</fullName>
        <formula>IF(   NDR_GPMS_Status__c ==&apos;G&apos; , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;), 
IF( NDR_GPMS_Status__c ==&apos;R&apos; , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;), 
&apos;&apos; 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_GPMS_Status__c</fullName>
        <description>This field is used to capture the GPMS signals</description>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_GSPR_Request_Number__c</fullName>
        <label>GSPR Request Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Individual_Line_Item_Status__c</fullName>
        <label>Individual Line Item Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Internal_Comments__c</fullName>
        <inlineHelpText>These comments were entered for this NDR or for this Material</inlineHelpText>
        <label>Internal Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDR_Item_Number__c</fullName>
        <label>Item Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Item_Price_Currency__c</fullName>
        <inlineHelpText>applies to both item_unit_price and item_total_price</inlineHelpText>
        <label>Item Price Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Item_Price_Per__c</fullName>
        <inlineHelpText>applies to both item_unit_price and item_total_price</inlineHelpText>
        <label>Item Price Per</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Item_Price_UOM__c</fullName>
        <inlineHelpText>applies to both item_unit_price and item_total_price</inlineHelpText>
        <label>Item Price UOM</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Item_Status_Desc__c</fullName>
        <label>Item Status Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NDR_Item_Total_Price_Total_Value__c</fullName>
        <label>Item Total Price (Total Value)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Item_Unit_Price_Quoted_Price__c</fullName>
        <label>Item Unit Price (Quoted Price)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Master_Carton_Weight_Unit_of_Measure__c</fullName>
        <label>Master Carton Weight Unit of Measure</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Master_Carton_Weight__c</fullName>
        <label>Master Carton Weight</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Minimum_Delivery_Quantity__c</fullName>
        <label>Minimum Delivery Quantity</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_Minimum_Order_Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_OEM_Pricing_Partner_for_item__c</fullName>
        <label>OEM Pricing Partner for item</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Part_Description__c</fullName>
        <label>Part Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Part_URL__c</fullName>
        <label>Part URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NDR_Price_Effective_Date__c</fullName>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDR_Price_Expiration_Date__c</fullName>
        <label>Price Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDR_Price_at_time_of_Request_Currency__c</fullName>
        <label>Price at time of Request Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Price_at_time_of_Request_Per__c</fullName>
        <label>Price at time of Request Per</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Price_at_time_of_Request_UOM__c</fullName>
        <label>Price at time of Request UOM</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Price_at_time_of_Request__c</fullName>
        <label>Price at time of Request</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Pricing_Agreement__c</fullName>
        <inlineHelpText>If available for item</inlineHelpText>
        <label>Pricing Agreement</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Range__c</fullName>
        <label>Range</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_Rejection_Comments__c</fullName>
        <label>DMM Rejection Comments</label>
        <length>1750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDR_Rejection_Reason__c</fullName>
        <label>DMM Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Working Program with Another Distributor</fullName>
                </value>
                <value>
                    <fullName>Part Number Previously Purchased</fullName>
                </value>
                <value>
                    <fullName>TE Restricted Part Number</fullName>
                </value>
                <value>
                    <fullName>Part Number on OEM Agreement</fullName>
                </value>
                <value>
                    <fullName>PN Obsolete/End of Life</fullName>
                </value>
                <value>
                    <fullName>Does Not Meet $5K Line Item TE Requirement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDR_Resale_Selling_Price_Currency__c</fullName>
        <label>Resale Selling Price Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Resale_Selling_Price_Per__c</fullName>
        <label>Resale Selling Price Per</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Resale_Selling_Price_UOM__c</fullName>
        <label>Resale Selling Price UOM</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Resale_Selling_Price__c</fullName>
        <label>Resale Selling Price</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Sales_Specific_Comments__c</fullName>
        <label>Sales Specific Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDR_Ship_and_Debit_Price_Currency__c</fullName>
        <label>Ship and Debit Price Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Ship_and_Debit_Price_Per__c</fullName>
        <label>Ship and Debit Price Per</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Ship_and_Debit_Price_UOM__c</fullName>
        <label>Ship and Debit Price UOM</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Ship_and_Debit_Price__c</fullName>
        <defaultValue>Text(0)</defaultValue>
        <label>Ship and Debit Price</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Shipper_Quantity_Type__c</fullName>
        <label>Shipper Quantity Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Shipper_Quantity_Unit_of_Measure__c</fullName>
        <label>Shipper Quantity Unit of Measure</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Shipper_Quantity__c</fullName>
        <label>Shipper Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_UOM__c</fullName>
        <description>Request Quantity Unit of Measure of Item</description>
        <label>UOM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Unit_Package_Quantity__c</fullName>
        <label>Unit Package Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_Unit_Package_Type__c</fullName>
        <label>Unit Package Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Unit_Quantity_Unit_of_Measure__c</fullName>
        <label>Unit Quantity Unit of Measure</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_part_URL_Custom_link__c</fullName>
        <formula>IF( NDR_Part_URL__c  &lt;&gt; NULL,HYPERLINK( NDR_Part_URL__c , &quot;gpms.te.com&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part URL Custom link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Development_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Development Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Part_Description__c</fullName>
        <description>Short part description</description>
        <inlineHelpText>Describe the new part (max 255 characters). If a longer description is needed, please use the &apos;Comments&apos; field.</inlineHelpText>
        <label>New Part Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offered_Price__c</fullName>
        <label>Requested Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppIdPartNumber__c</fullName>
        <externalId>true</externalId>
        <label>OppIdPartNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_ID__c</fullName>
        <formula>Opportunity__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp. Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Part_Counter__c</fullName>
        <description>this field is used to count opportunity parts in reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Part Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Roll_Count__c</fullName>
        <formula>Opportunity__r.Opportunity_Part_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Roll Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_combined_data__c</fullName>
        <formula>IF(NOT(ISBLANK(Part_Number__c)),Opportunity__r.Name &amp; &quot; - PN &quot; &amp; Part_Number__c &amp; &quot; - &quot; &amp;  Item_Description__c,Opportunity__r.Name &amp; &quot; - no PN &quot; &amp; Part_Number__c &amp; &quot; - &quot; &amp;  Item_Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity (combined data)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_owner__c</fullName>
        <formula>Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_need_update__c</fullName>
        <formula>IF(
	AND(
	     CONTAINS(BU_profit_center__c, &apos;Appliance&apos;),
	     Opportunity__r.RecordType.DeveloperName &lt;&gt; &apos;Lost_Business_Appliances&apos;, 
	     Opportunity__r.RecordType.DeveloperName &lt;&gt; &apos;Opportunity_Product_Platform&apos;, 
	     Opportunity__r.RecordType.DeveloperName &lt;&gt; &apos;Program&apos;, 
	     Opportunity__r.RecordType.DeveloperName &lt;&gt; &apos;TAM&apos;, 
             Opportunity__r.RecordType.DeveloperName &lt;&gt; &apos;NDR_Opportunity&apos;,
	     AND(
		OR(
			ISPICKVAL(Status__c,&apos;Weak&apos;),
			ISPICKVAL(Status__c,&apos;50/50&apos;),
			ISPICKVAL(Status__c,&apos;Likely&apos;),
			ISPICKVAL(Status__c,&apos;Commit&apos;),
			AND(
				ISPICKVAL(Status__c,&apos;Won&apos;),
				ISPICKVAL(Process_Status__c,&apos;Pre-prod&apos;)

			)
		),
		Opportunity__r.Days_since_last_user_update__c &gt; 60
	     )
	),
	&apos;YES&apos;,
	&apos;NO&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue need update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLMID_matches_Opp_PLMID__c</fullName>
        <description>This field checks whether the PLM ID of the part matches the PLM ID of the opportunity. Used for Engineering Forecast Billing</description>
        <formula>IF( PLM_ID__c =  Opportunity__r.PLM_Id__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLMID matches Opp PLMID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLM_ID__c</fullName>
        <formula>Part__r.PLM_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Name__c</fullName>
        <description>Shows descriptive part name for proposal parts and sales part description plus part number for sales parts.IF(
	
	NOT(ISBLANK(Similar_TE_Part_Number__c)), 
Similar_TE_Part_Number__r.Description__c,
	
	IF(
			ISBLANK(Similar_TE_Part_Number__c)
		, GPL__r.GPL_Description__c,
		
		Part__r.Description__c
	)
)</description>
        <formula>IF(NOT(ISBLANK(Part__c)),  Part__r.Description__c, LEFT(New_Part_Description__c, 40))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <description>This field contains the Part Number. It is used in Offline App.</description>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number_defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Number defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Number_txt__c</fullName>
        <description>This field contains part number</description>
        <formula>Part__r.Name</formula>
        <label>Part Number Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Opportunity Parts</relationshipLabel>
        <relationshipName>Opportunity_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pieces_in_Pack__c</fullName>
        <label>Pieces in Pack</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Pipeline_Conversion__c</fullName>
        <description>field to select if an opportunity counted for pipleine or conversion in previous years.</description>
        <label>Previous Year Pipeline/Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Pipeline</fullName>
                </value>
                <value>
                    <fullName>FY12 Conversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Pack_Quantity__c</fullName>
        <label>Primary Pack Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Month_Cost_Se_t75__c</fullName>
        <label>Prior Month Cost Set75</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Process_Status__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concept</fullName>
                    <default>true</default>
                    <label>Concept</label>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Designed</fullName>
                </value>
                <value>
                    <fullName>Prototyped/Sampled</fullName>
                </value>
                <value>
                    <fullName>Quoted</fullName>
                </value>
                <value>
                    <fullName>Pre-prod</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Ramp-down</fullName>
                </value>
                <value>
                    <fullName>EOL</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code_Name__c</fullName>
        <formula>Part__r.PROD_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Raysulate</fullName>
                </value>
                <value>
                    <fullName>Raychem</fullName>
                </value>
                <value>
                    <fullName>Utilux</fullName>
                </value>
                <value>
                    <fullName>Surge Arrestors</fullName>
                </value>
                <value>
                    <fullName>Overhead- Simel, ALR, Helstern,Tercon</fullName>
                </value>
                <value>
                    <fullName>Insulator Range</fullName>
                </value>
                <value>
                    <fullName>High Voltage Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>Guro Resin and Accessories</fullName>
                </value>
                <value>
                    <fullName>Ampact Range</fullName>
                </value>
                <value>
                    <fullName>Underground</fullName>
                </value>
                <value>
                    <fullName>Underground Connectors</fullName>
                </value>
                <value>
                    <fullName>ADC Krone</fullName>
                </value>
                <value>
                    <fullName>Overhead Distribution - Simel, ALR, Helstern,Tercon</fullName>
                </value>
                <value>
                    <fullName>Dulmison Product</fullName>
                </value>
                <value>
                    <fullName>Identification Labels</fullName>
                </value>
                <value>
                    <fullName>Utilux Cable Ties</fullName>
                </value>
                <value>
                    <fullName>Over Head Network</fullName>
                </value>
                <value>
                    <fullName>Dulmison Insulators</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>Tappat</fullName>
                </value>
                <value>
                    <fullName>WrapTEr Helicals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Manager_Id__c</fullName>
        <formula>GPL__r.Product_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <formula>IF( 
NOT( 
ISNULL( GPL__r.Product_Manager__c) 
), GPL__r.Product_Manager__r.FirstName &amp; &quot; &quot; &amp; GPL__r.Product_Manager__r.LastName , null 
)</formula>
        <label>Product Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Owning_BU__c</fullName>
        <formula>CASE(
  (IF (ISBLANK(GPL__c), 
     Part__r.Product_Hierarchy__r.CBC2_Description__c,
     GPL__r.CBC2_Description__c )
   ), 
&quot;A&amp;C products&quot;, &quot;A&amp;C&quot;,
&quot;A&amp;C Products&quot;, &quot;A&amp;C&quot;, 
&quot;Industrial BU&quot;, &quot;Industrial&quot;, 
&quot;IB products&quot;, &quot;IB&quot;, 
&quot;IB Products&quot;, &quot;IB&quot;,  
&quot;Cable Assemblies&quot;, &quot;Appliances&quot;,
&quot;Power Interconnects&quot;, &quot;Appliances&quot;,
&quot;Signal Interconnects&quot;, &quot;Appliances&quot;,
&quot;APPLIANCES GENERAL PURPOSE RELAYS&quot;, &quot;Appliances&quot;,
&quot;RAST&quot;, &quot;Appliances&quot;,
&quot;TERMINALS &amp; SPLICES&quot;, &quot;Appliances&quot;,
&quot;TUBING&quot;, &quot;Appliances&quot;,
&quot;MAGNET WIRE&quot;, &quot;Appliances&quot;, 
&quot;Rail products&quot;, &quot;Rail&quot;,
&quot;Rail Products&quot;, &quot;Rail&quot;,
&quot;Solar Products&quot;, &quot;Solar&quot;,
&quot;Solar products&quot;, &quot;Solar&quot;,
&quot;DataComm-Core Products&quot;, &quot;DataComm&quot;,
&quot;Catheter&quot;, &quot;Medical&quot;, 
&quot;Medical - Future&quot;, &quot;Medical&quot;, 
&quot;Multi-Segment and Misc&quot;, &quot;Medical&quot;, 
&quot;Patient Monitoring&quot;, &quot;Medical&quot;,
&quot;Surgical&quot;, &quot;Medical&quot;,
&quot;Ultrasound&quot;, &quot;Medical&quot;,
&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Approver BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Owning_GIBU_Energy__c</fullName>
        <formula>CASE(IF(NOT(ISBLANK(GPL__c)), GPL__r.CBC2_Description__c, Part__r.Product_Hierarchy__r.CBC2_Description__c), 
&quot;A&amp;C products&quot;, &quot;A&amp;C&quot;, 
&quot;A&amp;C Products&quot;, &quot;A&amp;C&quot;, 
&quot;Industrial BU&quot;, &quot;Industrial&quot;, 
&quot;IB products&quot;, &quot;IB&quot;, 
&quot;IB Products&quot;, &quot;IB&quot;, 
&quot;ITW Appliance&quot;, &quot;Appliances&quot;, 
&quot;Rail products&quot;, &quot;Rail&quot;, 
&quot;Rail Products&quot;, &quot;Rail&quot;, 
&quot;Solar Products&quot;, &quot;Solar&quot;, 
&quot;Solar products&quot;, &quot;Solar&quot;, 
&quot;DataComm-Core Products&quot;, &quot;DataComm&quot;, 
&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Owning GIBU Energy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Owning_GIBU__c</fullName>
        <description>Which BU owns the product?</description>
        <label>Product Owning GIBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DataComm</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Consumer Devices</fullName>
                </value>
                <value>
                    <fullName>Other BU</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>